ajout prise en charge background annimé

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 __pycache__/client_main.cpython-39.pyc
 bibliotheque/__pycache__/pygame_server_client.cpython-39.pyc
 server/__pycache__/server_bibliotheque.cpython-39.pyc
+.DS_Store
+bibliotheque/__pycache__/pygame_menu.cpython-39.pyc
+bibliotheque/__pycache__/pygame_server_client.cpython-39.pyc
